tests/data/ingress-class/nginx-class-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: default-class-ingress
spec:
  rules:
  - host: default-class.example.com
    http:
      paths:
      - path: /backend2
        backend:
          serviceName: backend2-svc
          servicePort: 80
      - path: /backend1
        backend:
          serviceName: backend1-svc
          servicePort: 80
